--- a/app.json
+++ b/app.json
@@ -4,6 +4,8 @@
     "slug": "expoReact",
     "privacy": "public",
     "sdkVersion": "34.0.0",
+    "FacebookAppID":"2134769580156998",
+    "facebookDisplayName": "Hapr",
     "platforms": [
       "ios",
       "android",
